objects/Avalara_Tax_Calculation__c/Avalara_Tax_Calculation__c.object-meta.xml
<CustomObject>
    <label>Avalara Tax Calculation</label>
    <nameField>
        <displayFormat>AVL-{00000}</displayFormat>
        <label>Avalara Tax Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avalara Tax Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>