objects/Avalara_Tax_Calculation__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing</label>
    <referenceTo>AcctSeed__Billing__c</referenceTo>
    <relationshipLabel>Avalara Tax Calculations</relationshipLabel>
    <relationshipName>Avalara_Tax_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>