objects/Avalara_Tax_Calculation__c/fields/Billing_Line__c.field-meta.xml
<CustomField>
    <fullName>Billing_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Line</label>
    <referenceTo>AcctSeed__Billing_Line__c</referenceTo>
    <relationshipLabel>Avalara Tax Calculations</relationshipLabel>
    <relationshipName>Avalara_Tax_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>