objects/Avalara_Tax_Calculation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Avalara Tax Calculations</relationshipLabel>
    <relationshipName>Avalara_Tax_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>