objects/Avalara_Tax_Calculation__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Avalara Tax Calculations</relationshipLabel>
    <relationshipName>Avalara_Tax_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>