objects/Avalara_Tax_Calculation__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Avalara Tax Calculations</relationshipLabel>
    <relationshipName>Avalara_Tax_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>