objects/Avalara_Tax_Calculation__c/fields/Required_Committed_Status__c.field-meta.xml
<CustomField>
    <fullName>Required_Committed_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Committed Status</label>
    <type>Checkbox</type>
</CustomField>