objects/Avalara_Tax_Calculation__c/fields/Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Response_JSON__c</fullName>
    <label>Response JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>