objects/Avalara_Tax_Calculation__c/fields/Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line</label>
    <referenceTo>AcctSeedERP__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Avalara Tax Calculations</relationshipLabel>
    <relationshipName>Avalara_Tax_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>