objects/Avalara_Tax_Calculation__c/fields/Sales_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Amount__c</fullName>
    <label>Sales Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>