objects/Avalara_Tax_Calculation__c/fields/Tire_Fee__c.field-meta.xml
<CustomField>
    <fullName>Tire_Fee__c</fullName>
    <label>Tire Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>